--- a/project/frontend/src/app/components/harfen-aus-meisterhand/harfen-aus-meisterhand.component.html
+++ b/project/frontend/src/app/components/harfen-aus-meisterhand/harfen-aus-meisterhand.component.html
@@ -1,28 +1,87 @@
-<section class="py-5 green ">
-  <div class="container mx-sm-0  w-100 py-5 px-5 row">
-    <img class="p-3 col row-md-1  col-lg-5 col-xl-4 border-bottom  row-sm-1 " src="assets/content/harfenbau_1.jpg" alt=""
-         srcset="">
-
-    <div class="p-3 col   row-md-1  h5 col-lg-7 col-xl-7  content row-sm-1 ">
-      <h2>Jede Harfe ein liebevolles Unikat</h2>
-      <p>Wenn man die Möglichkeit hat, aus Gedanken und mit seiner Hände Macht, ein Instrument zu schaffen, und dieses
-        wunderbare Instrument die Herzen anderer Menschen berührt, hat einem das Leben etwas wundervolles Geschenkt.</p>
-      <b>Gracias a la vida!</b>
+<section class="py-5 green">
+  <div class="container py-5 px-5">
+    <div class="row">
+      <div class="col-lg-5 col-xl-4">
+        <img class="img-fluid border-top py-3" src="assets/content/jede-harfe-ein-liebevolles-unikat.jpg" alt="">
+      </div>
+      <div class="col-lg-7 col-xl-8">
+        <div class="h5">
+          <h2>Jede Harfe ein liebevolles Unikat</h2>
+          <p>Wenn man die Möglichkeit hat, aus Gedanken und mit seiner Hände Macht, ein Instrument zu schaffen, und
+            dieses wunderbare Instrument die Herzen anderer Menschen berührt, hat einem das Leben etwas wundervolles
+            Geschenkt.</p>
+          <b>Gracias a la vida!</b>
+        </div>
+      </div>
     </div>
   </div>
 </section>
 
-<section class="py-5  orange">
-  <div class="container mx-sm-0  w-100 py-5 px-5 row">
-    <div class="p-3 col row-md-7  row-lg-7 h5 col-xl-7   content row-sm-1 mx-lg-3">
-      <h2>Meisterwerkstatt</h2>
-      <h3>Genießen Sie die Klänge…</h3>
-      <p>…einer originalen „Reschenhofer Harfe“.</p>
-      <p> Professionell auf der Bühne, für sich allein zu Hause oder im
-        <i>therapeutischen</i> Bereich!</p>
+
+<section class="py-5 orange">
+  <div class="container py-5 px-5">
+    <div class="row">
+      <div class="col-lg-7 col-xl-8">
+        <div class="h5 ">
+          <h2>Meisterwerkstatt</h2>
+          <h3>Genießen Sie die Klänge…</h3>
+          <p>…einer originalen „Reschenhofer Harfe“.</p>
+          <p> Professionell auf der Bühne, für sich allein zu Hause oder im
+            <i>therapeutischen</i> Bereich!</p>
+        </div>
+      </div>
+      <div class="col-lg-5 col-xl-4 ">
+        <img class="img-fluid border-bottom py-3" src="assets/content/harfenbau_1.jpg" alt="">
+      </div>
     </div>
-    <img class="p-3 col row-md-4 row-lg-7 col-xl-4 border-bottom  row-sm-1 mx-lg-3" src="assets/content/harfenbau_1.jpg" alt=""
-         srcset="">
+  </div>
+</section>
+
+
+<section class="py-5 orange">
+  <div class="container py-5 px-5">
+    <div class="row">
+      <div class="col-lg-7 col-xl-8 ">
+        <div class="h5">
+          <h3>Auswahl der Materialien</h3>
+          <p>Altes Wissen bestimmt im Wesentlichen die Auswahl des Holzes. So wie der Mond die Gezeiten bewegt, so
+            wandern auch die Säfte im Holz.
+
+            Fast nur heimische Hölzer werden verwendet, wie Ahorn, Birne, Zwetschke, Nuss, und Bergfichte sind die
+            speziellen Holzarten für den Harfenbau.
+
+            Besonderes Augenmerk wird auf Details und Oberflächenbehandlung gelegt !
+
+            Durch die alte Kunst des Schellackpolierens, wird eine homogene Oberfläche auf das Instrument durch Hand
+            aufpoliert, welche beste Eigenschaften aufweist und vom Instrument durch einen wundervollen Klang bestätigt
+            wird.</p>
+        </div>
+      </div>
+      <div class="col-lg-5 col-xl-4">
+        <img class="img-fluid border-bottom py-3" src="assets/content/harfenbau_2.jpg" alt="">
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section class="py-5 orange">
+  <div class="container py-5 px-5">
+    <div class="row">
+      <div class="col-lg-7 col-xl-8">
+        <div class="row">
+          <div class="col-md-4">
+            <img class="img-fluid border-bottom py-3" src="assets/content/harfenbau_2.jpg" alt="">
+          </div>
+          <div class="col-md-4">
+            <img class="img-fluid border-bottom py-3" src="assets/content/harfenbau_2.jpg" alt="">
+          </div>
+          <div class="col-md-4">
+            <img class="img-fluid border-bottom py-3" src="assets/content/harfenbau_2.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 
