--- a/project/frontend/src/app/components/harfen-aus-meisterhand/harfen-aus-meisterhand.component.html
+++ b/project/frontend/src/app/components/harfen-aus-meisterhand/harfen-aus-meisterhand.component.html
@@ -2,7 +2,7 @@
   <div class="container py-5 px-5">
     <div class="row">
       <div class="col-lg-5 col-xl-4">
-        <img class="img-fluid border-top py-3" src="assets/content/jede-harfe-ein-liebevolles-unikat.jpg" alt="">
+        <img class="img-fluid border-top py-3 w-100" src="assets/content/jede-harfe-ein-liebevolles-unikat.jpg" alt="">
       </div>
       <div class="col-lg-7 col-xl-8">
         <div class="h5">
@@ -31,7 +31,7 @@
         </div>
       </div>
       <div class="col-lg-5 col-xl-4 ">
-        <img class="img-fluid border-bottom py-3" src="assets/content/harfenbau_1.jpg" alt="">
+        <img class="img-fluid border-bottom py-3 w-100" src="assets/content/harfenbau_1.jpg" alt="">
       </div>
     </div>
   </div>
@@ -58,7 +58,7 @@
         </div>
       </div>
       <div class="col-lg-5 col-xl-4">
-        <img class="img-fluid border-bottom py-3" src="assets/content/harfenbau_2.jpg" alt="">
+        <img class="img-fluid border-bottom py-3 w-100" src="assets/content/harfenbau_2.jpg" alt="">
       </div>
     </div>
   </div>
@@ -68,18 +68,65 @@
 <section class="py-5 orange">
   <div class="container py-5 px-5">
     <div class="row">
-      <div class="col-lg-7 col-xl-8">
+      <div class=" w-100 col-lg-7 col-xl-8">
         <div class="row">
           <div class="col-md-4">
-            <img class="img-fluid border-bottom py-3" src="assets/content/harfenbau_2.jpg" alt="">
+            <img class="img-fluid border-bottom py-3 w-100" src="assets/content/meisterwerkstatt_1.jpg" alt="">
           </div>
           <div class="col-md-4">
-            <img class="img-fluid border-bottom py-3" src="assets/content/harfenbau_2.jpg" alt="">
+            <img class="img-fluid border-bottom py-3 w-100" src="assets/content/meisterwerkstatt_2.jpg" alt="">
           </div>
           <div class="col-md-4">
-            <img class="img-fluid border-bottom py-3" src="assets/content/harfenbau_2.jpg" alt="">
+            <img class="img-fluid border-bottom py-3 w-100" src="assets/content/meisterwerkstatt_3.jpg" alt="">
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="py-5 green">
+  <div class="container py-5 px-5">
+    <div class="row">
+      <div class="col-lg-4 col-xl-4">
+        <img class="img-fluid border-top py-3 w-100  mx-auto" src="assets/content/restauration_1.jpg" alt="">
+      </div>
+      <div class="col-lg-8 col-xl-8">
+        <div class="h5">
+          <div class="row mx-auto">
+
+            <div class="col-lg-6">
+              <h2>Restauration</h2>
+              <h3>historische Instrumente</h3>
+              <p>Werden sorgfältig und fachkundig bestimmt und restauriert. Ich arbeite für verschiedene Museen als Restaurator (Carolino Augusteum – Salzburg, Schloß Kremsegg – Instrumentenmuseum). Es besteht ein wesentlicher Unterschied zwischen Restaurierung und Renovierung. Dieses sollte einem Besitzer von historischen Musikinstrumenten bewusst sein.</p>
+              <b>„Jahresschrift 42 – 1996 – Gambe, Chello, Kontrabass – Zupf- und Streichinstrumente – Katalog und Forschung“</b>
+              <p>ISBN 3-901014-50-0 können Sie meine Arbeiten (Restaurierungen der Harfen) begutachten.</p>
+            </div>
+            <div class="col-lg-6 ">
+              <img class="img-fluid border-top py-3 mx-auto w-100" src="assets/content/restauration_2.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="py-5 orange">
+  <div class="container py-5 px-5">
+    <div class="row">
+      <div class="col-lg-7 col-xl-8">
+        <div class="h5 ">
+          <h2>Garantie</h2>
+
+          <p>Solange ich lebe und mein Wirken es mir ermöglicht, gebe ich Garantie auf  meine Harfen !
+
+            Davon ausgenommen sind Schäden, die durch unsachgemäße Behandlung oder durch Fahrlässigkeit entstehen.</p>
+          <b class="h3"><i>Franz Reschenhofer</i></b>
+        </div>
+      </div>
+      <div class="col-lg-5 col-xl-4 ">
+        <img class="img-fluid border-bottom py-3 w-100" src="assets/content/harfenbau_4.jpg" alt="">
       </div>
     </div>
   </div>
