--- a/project/frontend/src/app/components/nav/nav.component.html
+++ b/project/frontend/src/app/components/nav/nav.component.html
@@ -20,8 +20,9 @@
       <p class="my-3 navitems" routerLink="impressum">Impressum</p>
     </mat-list>
   </mat-sidenav>
+
   <mat-sidenav-content>
-    <button
+    <button class="sticky-md-top"
       type="button"
       aria-label="Toggle sidenav"
       mat-icon-button
