--- a/project/frontend/src/styles.scss
+++ b/project/frontend/src/styles.scss
@@ -14,8 +14,24 @@ body {
   color: #000000
 }
 
+.h-30{
+  height:30%
+}
+.h-35{
+  height:35%
+}
 .w-30 {
   width: 30%;
+}
+.w-35 {
+  width: 35%;
+}
+.w-40 {
+  width: 40%;
+}
+
+.w-85 {
+  width: 85%;
 }
 
 .orange{
