--- a/project/frontend/src/app/components/instrumente/instrumente.component.html
+++ b/project/frontend/src/app/components/instrumente/instrumente.component.html
@@ -1,1 +1,256 @@
-<p>instrumente works!</p>
+<section class="bg-custom">
+  <div class="py-4"></div>
+  <div class="py-4"></div>
+  <div class="py-3"></div>
+  <h2 class="text-center align-center py-5">Instrumente</h2>
+</section>
+
+
+<section class="py-5 orange">
+  <div class="container py-5 px-5">
+    <div class="row">
+
+      <div class="h5 text-left w-75 mx-auto">
+        <h1 class="text-center">Reschenhofer Harfen – hören, sehen und fühlen!</h1>
+        <div class="py-4"></div>
+        <p>
+          Ich lade Sie ein, in meiner Werkstätte den Zauber der meisterlichen Harfenkunst zu erleben. Gerne berate ich
+          Sie bei der Auswahl Ihrer passenden Harfe. Grundsätzlich sucht sich ja die Harfe den passenden Spieler aus.
+          Auf eine spannende Begegnung freut sich Franz Reschenhofer.
+          Gracias a la vida!
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+<!--- Hochformat --->
+
+<section class="py-5 orange">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 ">
+        <div class="column mx-auto text-center">
+          <h3 class="py-3" [routerLink]="['details/tribella']">Harfe Tribella</h3>
+
+          <img class=" img-fluid h-50 py-3" src="assets/content/GHG_7795-1-e1643396109508-200x300.jpg"
+               alt="Harfe Tribella">
+        </div>
+      </div>
+      <div class="col-sm-6 ">
+        <div class="column mx-auto text-center">
+          <h3 class="py-3">Harfe Linde</h3>
+          <img class="img-fluid h-50 py-3" src="assets/content/Harfenbau-Reschenhofer_2020__03-161x300.jpg"
+               alt="Harfe Linde">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--- Querformat --->
+
+<section class="py-5 orange">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 ">
+        <div class="column mx-auto text-center">
+          <h3 class="py-3">Harfe Troubadour Figueras</h3>
+          <img class=" img-fluid w-85 py-3" src="assets/content/Troubadour-Figueras-Titelbild.png"
+               alt="Harfe Troubadour Figueras">
+        </div>
+      </div>
+      <div class="col-sm-6 ">
+        <div class="column mx-auto text-center">
+          <h3 class="py-3">Harfe Arianna</h3>
+          <img class="img-fluid w-85 py-3" src="assets/content/harfen_vorlage_quer_.png" alt="Harfe Arianna">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--- Querformat --->
+
+<section class="py-5 orange">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 ">
+        <div class="column mx-auto text-center">
+          <h3 class="py-3">Die gotische Harfe – 25-Saitig</h3>
+          <img class=" img-fluid w-85 py-3" src="assets/content/die-gotische-harfe-titel-1.png"
+               alt="Harfe Troubadour Figueras">
+        </div>
+      </div>
+      <div class="col-sm-6 ">
+        <div class="column mx-auto text-center">
+          <h3 class="py-3">Die gotische Harfe – 30-Saitig</h3>
+          <img class="img-fluid w-85 py-3" src="assets/content/die-gotische-harfe-–-30-saitig-titel.png" alt="Die gotische Harfe – 30-Saitig">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--- Hochformat --->
+
+<section class="py-5 orange">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 ">
+        <div class="column mx-auto text-center">
+          <h3 class="py-3">Die gotische Harfe – 36-Saitig</h3>
+
+          <img class=" img-fluid h-50 py-3" src="assets/content/die-gotische-harfe-–-36-saitig_titelbild.png"
+               alt="Die gotische Harfe – 36-Saitig">
+        </div>
+      </div>
+      <div class="col-sm-6 ">
+        <div class="column mx-auto text-center">
+          <h3 class="py-3">Harfe Mechteld</h3>
+          <img class="img-fluid h-50 py-3" src="assets/content/mechteld_cover1.png"
+               alt="Harfe Mechteld">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+<!--- Querformat --->
+
+<section class="py-5 orange">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 ">
+        <div class="column mx-auto text-center">
+          <h3 class="py-3">Tara</h3>
+          <img class=" img-fluid w-85 py-3" src="assets/content/tara_quer.jpg"
+               alt="Tara">
+        </div>
+      </div>
+      <div class="col-sm-6 ">
+        <div class="column mx-auto text-center">
+          <h3 class="py-3">Harfe Thrud</h3>
+          <img class="img-fluid w-85 py-3" src="assets/content/thrud-titel-neu.jpg" alt="Harfe Thrud">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--- Querformat --->
+
+<section class="py-5 orange">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 ">
+        <div class="column mx-auto text-center">
+          <h3 class="py-3">Harfe Merlin</h3>
+          <img class=" img-fluid w-85 py-3" src="assets/content/merlin_01.jpg"
+               alt="Harfe Merlin">
+        </div>
+      </div>
+      <div class="col-sm-6 ">
+        <div class="column mx-auto text-center">
+          <h3 class="py-3">l’arpa doble aragones</h3>
+          <img class="img-fluid w-85 py-3" src="assets/content/aragones_04_quer.jpg" alt="l’arpa doble aragones">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--- Hochformat --->
+
+<section class="py-5 orange">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 ">
+        <div class="column mx-auto text-center">
+          <h3 class="py-3">Tripel-Harfe Angelica</h3>
+
+          <img class=" img-fluid h-50 py-3" src="assets/content/harfe-angelica-titel.png"
+               alt="Tripel-Harfe Angelica">
+        </div>
+      </div>
+      <div class="col-sm-6 ">
+        <div class="column mx-auto text-center">
+          <h3 class="py-3">Harpa Algebra</h3>
+          <img class="img-fluid h-50 py-3" src="assets/content/algebra_titel.png"
+               alt="Harpa Algebra">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--- Hochformat --->
+
+<section class="py-5 orange">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 ">
+        <div class="column mx-auto text-center">
+          <h3 class="py-3">Irische Harfe 28-Saitig</h3>
+
+          <img class=" img-fluid h-50 py-3" src="assets/content/irisch-28-saitig-titel.png"
+               alt="Tripel-Harfe Angelica">
+        </div>
+      </div>
+      <div class="col-sm-6 ">
+        <div class="column mx-auto text-center">
+          <h3 class="py-3">Die Keltische Harfe</h3>
+          <img class="img-fluid h-50 py-3" src="assets/content/keltisch_1.jpg"
+               alt="Harpa Algebra">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--- Hochformat --->
+
+<section class="py-5 orange">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 ">
+        <div class="column mx-auto text-center">
+          <h3 class="py-3">Die Kantele</h3>
+
+          <img class=" img-fluid h-50 py-3" src="assets/content/kantele-titel.png"
+               alt="Tripel-Harfe Angelica">
+        </div>
+      </div>
+      <div class="col-sm-6 ">
+        <div class="column mx-auto text-center">
+          <h3 class="py-3">Die Lyra</h3>
+          <img class="img-fluid h-50 py-3" src="assets/content/lyra-titel.png"
+               alt="Harpa Algebra">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<!--- Querformat --->
+
+<section class="py-5 orange">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 ">
+        <div class="column mx-auto text-center">
+          <h3 class="py-3">Windharfen & Klangskulpturen</h3>
+          <img class=" img-fluid w-85 py-3" src="assets/content/windharfen_titel.jpg"
+               alt="Harfe Merlin">
+        </div>
+      </div>
+      <div class="col-sm-6 ">
+        <div class="column mx-auto text-center">
+          <h3 class="py-3">Zubehör</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
