added new instruments

--- a/project/frontend/src/app/components/instrumente/details/tribella/tribella.component.html
+++ b/project/frontend/src/app/components/instrumente/details/tribella/tribella.component.html
@@ -32,16 +32,25 @@
         </p>
 
         <!-- app.component.html -->
+
+
         <div class="row">
-          <div class="col-6 col-md-6" (click)="openLightbox('assets/Harfen/Tribella/GHG_7785.jpg')">
-            <img class="img-fluid py-1 h-75" src="assets/Harfen/Tribella/GHG_7785.jpg" alt="">
+          <div class="col-12 col-md-6 col-lg-6" (click)="openLightbox('assets/Harfen/Linde/Harfenbau-Reschenhofer_2020__03-161x300.jpg')">
+            <div class="d-flex justify-content-center">
+              <img class="img-fluid py-1 h-md-7 h-75" src="assets/Harfen/Tribella/GHG_7785.jpg" alt="">
+            </div>
           </div>
-          <div class="col-6 col-md-6" (click)="openLightbox('assets/Harfen/Tribella/GHG_7787.jpg')">
-            <img class="img-fluid py-1 h-75" src="assets/Harfen/Tribella/GHG_7787.jpg" alt="">
+          <div class="col-12 col-md-6 col-lg-6" (click)="openLightbox('Linde/Harfenbau-Reschenhofer_2020__08-152x300.jpg')">
+            <div class="d-flex justify-content-center">
+              <img class="img-fluid py-1 h-md-75 h-75" src="assets/Harfen/Tribella/GHG_7787.jpg" alt="">
+            </div>
           </div>
-          <div class="col-6 col-md-6" (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
-            <img class="img-fluid py-1 h-75" src="assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg" alt="">
+          <div class="col-12 col-md-6 col-lg-6" (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
+            <div class="d-flex justify-content-center">
+              <img class="img-fluid py-4 h-md-75 h-75" src="assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg" alt="">
+            </div>
           </div>
+
           <!-- Add more images here if needed -->
         </div>
 
