--- a/project/frontend/src/app/components/instrumente/instrumente.component.html
+++ b/project/frontend/src/app/components/instrumente/instrumente.component.html
@@ -32,14 +32,14 @@
         <div class="column mx-auto text-center">
           <h3 class="py-3" [routerLink]="['details/tribella']">Harfe Tribella</h3>
 
-          <img class=" img-fluid h-50 py-3" src="assets/content/GHG_7795-1-e1643396109508-200x300.jpg"
+          <img class=" img-fluid h-50 py-3" [routerLink]="['details/tribella']" src="assets/content/GHG_7795-1-e1643396109508-200x300.jpg"
                alt="Harfe Tribella">
         </div>
       </div>
       <div class="col-sm-6 ">
         <div class="column mx-auto text-center">
-          <h3 class="py-3">Harfe Linde</h3>
-          <img class="img-fluid h-50 py-3" src="assets/content/Harfenbau-Reschenhofer_2020__03-161x300.jpg"
+          <h3 class="py-3" [routerLink]="['details/linde']">Harfe Linde</h3>
+          <img class="img-fluid h-50 py-3" [routerLink]="['details/linde']" src="assets/content/Harfenbau-Reschenhofer_2020__03-161x300.jpg"
                alt="Harfe Linde">
         </div>
       </div>
@@ -54,8 +54,8 @@
     <div class="row">
       <div class="col-sm-6 ">
         <div class="column mx-auto text-center">
-          <h3 class="py-3">Harfe Troubadour Figueras</h3>
-          <img class=" img-fluid w-85 py-3" src="assets/content/Troubadour-Figueras-Titelbild.png"
+          <h3 class="py-3" [routerLink]="['details/troubadour-figueras']">Harfe Troubadour Figueras</h3>
+          <img class=" img-fluid w-85 py-3" [routerLink]="['details/troubadour-figueras']" src="assets/content/Troubadour-Figueras-Titelbild.png"
                alt="Harfe Troubadour Figueras">
         </div>
       </div>
