--- a/project/frontend/src/app/components/instrumente/details/irisch28/irisch28.component.html
+++ b/project/frontend/src/app/components/instrumente/details/irisch28/irisch28.component.html
@@ -9,7 +9,7 @@
   <div class="py-4"></div>
   <div class="py-4"></div>
   <div class="container">
-    <p class="h1 white text-center">Harfe Algebra</p>
+    <p class="h1 white text-center">Irische Harfe 28-Saitig</p>
   </div>
 </section>
 
@@ -19,11 +19,13 @@
   <div class="container py-5">
     <div class="row">
       <div class="col-md-9">
-        <p class="h4">Eine Harfe mit einem aussergewöhnlichem Timbre von GG – e3. Sie hat ein warmes homogenes Klangbild
-          mit dem alte sowie moderne Musik sich spielen lässt.
+        <p class="h4">Die traditionelle irische Harfe ist relativ leicht und daher gut zu transportieren.
 
-          Diese Harfe wurde von mir im Jänner 2016 entworfen. Mit ihrem schlanken Korpus, der in Spänneform oder in
-          Rundbau ausgeführt werden kann, weist diese Harfe eine graziöse Ästhetik auf.</p>
+          Diese Harfe kann mit der dazugehörigen Tasche wie ein Rucksack transportiert werden.
+
+        </p>
+        <br><br>
+        <p class="h4">28 saitig von H bis a“‘ (432 – 440 Hz)</p>
 
 
         <br><br>
@@ -36,7 +38,7 @@
                (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
             <div class="d-flex justify-content-center">
               <img class="img-fluid py-4 h-md-75"
-                   src="assets/Harfen/Algebra/algebra_titel.png" alt="">
+                   src="assets/Harfen/irisch28/irisch-28-saitig-titel.png" alt="">
             </div>
           </div>
 
@@ -44,21 +46,7 @@
                (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
             <div class="d-flex justify-content-center">
               <img class="img-fluid py-4 h-md-75"
-                   src="assets/Harfen/Algebra/algebra_1.jpg" alt="">
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-6"
-               (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
-            <div class="d-flex justify-content-center">
-              <img class="img-fluid py-4 h-md-75"
-                   src="assets/Harfen/Algebra/algebra_2.jpg" alt="">
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-6"
-               (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
-            <div class="d-flex justify-content-center">
-              <img class="img-fluid py-4 h-md-75"
-                   src="assets/Harfen/Algebra/algebra_3.jpg" alt="">
+                   src="assets/Harfen/irisch28/irisch-28-saitig-1.jpg" alt="">
             </div>
           </div>
 
@@ -66,28 +54,14 @@
                (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
             <div class="d-flex justify-content-center">
               <img class="img-fluid py-4 h-md-75"
-                   src="assets/Harfen/Algebra/algebra_4.png" alt="">
+                   src="assets/Harfen/irisch28/irisch-28-saitig-2.jpg" alt="">
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-6"
                (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
             <div class="d-flex justify-content-center">
               <img class="img-fluid py-4 h-md-75"
-                   src="assets/Harfen/Algebra/algebra_5.jpg" alt="">
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-6"
-               (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
-            <div class="d-flex justify-content-center">
-              <img class="img-fluid py-4 h-md-75"
-                   src="assets/Harfen/Algebra/algebra_6.jpg" alt="">
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-6"
-               (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
-            <div class="d-flex justify-content-center">
-              <img class="img-fluid py-4 h-md-75"
-                   src="assets/Harfen/Algebra/algebra_7.jpg" alt="">
+                   src="assets/Harfen/irisch28/irisch-28-saitig-3.jpg" alt="">
             </div>
           </div>
 
@@ -95,25 +69,43 @@
                (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
             <div class="d-flex justify-content-center">
               <img class="img-fluid py-4 h-md-75"
-                   src="assets/Harfen/Algebra/algebra_8.jpg" alt="">
+                   src="assets/Harfen/irisch28/irisch-28-saitig-4.jpg" alt="">
             </div>
           </div>
+
           <div class="col-12 col-md-6 col-lg-6"
                (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
             <div class="d-flex justify-content-center">
               <img class="img-fluid py-4 h-md-75"
-                   src="assets/Harfen/Algebra/algebra.png" alt="">
+                   src="assets/Harfen/irisch28/irisch-28-saitig-4.jpg" alt="">
             </div>
           </div>
+
+
           <div class="col-12 col-md-6 col-lg-6"
                (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
             <div class="d-flex justify-content-center">
               <img class="img-fluid py-4 h-md-75"
-                   src="assets/Harfen/Algebra/algebra_10.png" alt="">
+                   src="assets/Harfen/irisch28/irisch-28-saitig-7.jpg" alt="">
             </div>
           </div>
 
 
+          <div class="col-12 col-md-6 col-lg-6"
+               (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
+            <div class="d-flex justify-content-center">
+              <img class="img-fluid py-4 h-md-75"
+                   src="assets/Harfen/irisch28/irisch-28-saitig-6.jpg" alt="">
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-6"
+               (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
+            <div class="d-flex justify-content-center">
+              <img class="img-fluid py-4 h-md-75"
+                   src="assets/Harfen/irisch28/irisch-28-saitig-5.jpg" alt="">
+            </div>
+          </div>
 
 
           <!-- Add more images here if needed -->
@@ -126,22 +118,22 @@
       <div class="col-md-3">
         <div class="sticky-list">
           <p class="h4">Höhe</p>
-          <p class="h5">153 cm</p>
+          <p class="h5">93 cm</p>
 
           <p class="h4">Breite</p>
-          <p class="h5">59 cm</p>
+          <p class="h5">45 cm</p>
 
           <p class="h4">Gewicht</p>
-          <p class="h5">6.5 kg</p>
+          <p class="h5">4.3 kg</p>
 
           <p class="h4">Halbtonmechanik</p>
           <p class="h5">verschiedene Mechaniken möglich</p>
 
           <p class="h4">Oberfläche</p>
-          <p class="h5">C 37 Speziallack für historische Harfen</p>
+          <p class="h5">Gewachst oder in Schellackpolitur erhältlich</p>
 
           <p class="h4">Holz</p>
-          <p class="h5">Fichte, Ahorn</p>
+          <p class="h5">Nussbaum, Birne, Ahorn oder Kirsche</p>
 
         </div>
       </div>
