--- a/project/frontend/src/app/components/instrumente/details/windharfen/windharfen.component.html
+++ b/project/frontend/src/app/components/instrumente/details/windharfen/windharfen.component.html
@@ -9,7 +9,7 @@
   <div class="py-4"></div>
   <div class="py-4"></div>
   <div class="container">
-    <p class="h1 white text-center">Harfe Algebra</p>
+    <p class="h1 white text-center">Windharfen & Klangskulpturen</p>
   </div>
 </section>
 
@@ -18,98 +18,109 @@
 <section *ngIf="showDialog" class="content">
   <div class="container py-5">
     <div class="row">
-      <div class="col-md-9">
-        <p class="h4">Eine Harfe mit einem aussergewöhnlichem Timbre von GG – e3. Sie hat ein warmes homogenes Klangbild
-          mit dem alte sowie moderne Musik sich spielen lässt.
+      <div class="col-md-4">
+        <p class="h2">Die Windharfe oder Äolsharfe:</p>
 
-          Diese Harfe wurde von mir im Jänner 2016 entworfen. Mit ihrem schlanken Korpus, der in Spänneform oder in
-          Rundbau ausgeführt werden kann, weist diese Harfe eine graziöse Ästhetik auf.</p>
+        <br> <br>
+        <p class="h4">Der Wind allein mit seinen Schwingen versetzt die Harfe in wunderbares Klingen.
 
-
+          Es werden die unterschiedlichsten Windharfen in meiner Werkstätte gebaut, von der kleinen bis zu den großen,
+          bis hin zur künstlerisch gestalteten Klangskulptur, für Parks oder Kunstausstellungen. Diese Windharfen werden
+          soweit es möglich ist, den Aufstellungsplätzen der Geomantie zugeordnet und danach entsprechend gestimmt. Das
+          so die Atmosphäre des jeweiligen Platzes hörbar gemacht wird. Das Singen der Windharfe weist eine
+          Verwandschaft mit Obertongesängen auf.</p>
         <br><br>
 
         <!-- app.component.html -->
+
+        <br><br><br>
+
+
+      </div>
+
+      <div class="col-md-8">
         <div class="row">
 
 
-          <div class="col-12 col-md-6 col-lg-12"
+          <div class="col-12 col-md-6 col-lg-4"
                (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
             <div class="d-flex justify-content-center">
               <img class="img-fluid py-4 h-md-75"
-                   src="assets/Harfen/Algebra/algebra_titel.png" alt="">
+                   src="assets/Harfen/Windharfe/windharfen_1.jpg" alt="">
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4"
+               (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
+            <div class="d-flex justify-content-center">
+              <img class="img-fluid py-4 h-md-75"
+                   src="assets/Harfen/Windharfe/windharfen_2.jpg" alt="">
             </div>
           </div>
 
-          <div class="col-12 col-md-6 col-lg-6"
+          <div class="col-12 col-md-6 col-lg-4"
                (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
             <div class="d-flex justify-content-center">
               <img class="img-fluid py-4 h-md-75"
-                   src="assets/Harfen/Algebra/algebra_1.jpg" alt="">
+                   src="assets/Harfen/Windharfe/windharfen_7.jpg" alt="">
             </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-6"
+          <div class="col-12 col-md-6 col-lg-4"
                (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
             <div class="d-flex justify-content-center">
               <img class="img-fluid py-4 h-md-75"
-                   src="assets/Harfen/Algebra/algebra_2.jpg" alt="">
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-6"
-               (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
-            <div class="d-flex justify-content-center">
-              <img class="img-fluid py-4 h-md-75"
-                   src="assets/Harfen/Algebra/algebra_3.jpg" alt="">
+                   src="assets/Harfen/Windharfe/windharfen_10.jpg" alt="">
             </div>
           </div>
 
-          <div class="col-12 col-md-6 col-lg-6"
+          <div class="col-12 col-md-6 col-lg-4"
                (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
             <div class="d-flex justify-content-center">
               <img class="img-fluid py-4 h-md-75"
-                   src="assets/Harfen/Algebra/algebra_4.png" alt="">
+                   src="assets/Harfen/Windharfe/windharfen_4.jpg" alt="">
             </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-6"
+          <div class="col-12 col-md-6 col-lg-4"
                (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
             <div class="d-flex justify-content-center">
               <img class="img-fluid py-4 h-md-75"
-                   src="assets/Harfen/Algebra/algebra_5.jpg" alt="">
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-6"
-               (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
-            <div class="d-flex justify-content-center">
-              <img class="img-fluid py-4 h-md-75"
-                   src="assets/Harfen/Algebra/algebra_6.jpg" alt="">
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-6"
-               (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
-            <div class="d-flex justify-content-center">
-              <img class="img-fluid py-4 h-md-75"
-                   src="assets/Harfen/Algebra/algebra_7.jpg" alt="">
+                   src="assets/Harfen/Windharfe/windharfen_5.jpg" alt="">
             </div>
           </div>
 
-          <div class="col-12 col-md-6 col-lg-6"
+          <div class="col-12 col-md-6 col-lg-4"
                (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
             <div class="d-flex justify-content-center">
               <img class="img-fluid py-4 h-md-75"
-                   src="assets/Harfen/Algebra/algebra_8.jpg" alt="">
+                   src="assets/Harfen/Windharfe/windharfen_3.jpg" alt="">
             </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-6"
+          <div class="col-12 col-md-6 col-lg-4"
                (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
             <div class="d-flex justify-content-center">
               <img class="img-fluid py-4 h-md-75"
-                   src="assets/Harfen/Algebra/algebra.png" alt="">
+                   src="assets/Harfen/Windharfe/windharfen_8.jpg" alt="">
             </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-6"
+          <div class="col-12 col-md-6 col-lg-4"
                (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
             <div class="d-flex justify-content-center">
               <img class="img-fluid py-4 h-md-75"
-                   src="assets/Harfen/Algebra/algebra_10.png" alt="">
+                   src="assets/Harfen/Windharfe/windharfen_9.jpg" alt="">
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-4"
+               (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
+            <div class="d-flex justify-content-center">
+              <img class="img-fluid py-4 h-md-75"
+                   src="assets/Harfen/Windharfe/windharfen_11.jpg" alt="">
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4"
+               (click)="openLightbox('assets/Harfen/Tribella/GHG_7795-1-e1643396109508.jpg')">
+            <div class="d-flex justify-content-center">
+              <img class="img-fluid py-4 h-md-75"
+                   src="assets/Harfen/Windharfe/windharfen_12.jpg" alt="">
             </div>
           </div>
 
@@ -117,32 +128,6 @@
 
 
           <!-- Add more images here if needed -->
-        </div>
-        <br><br><br>
-
-
-      </div>
-
-      <div class="col-md-3">
-        <div class="sticky-list">
-          <p class="h4">Höhe</p>
-          <p class="h5">153 cm</p>
-
-          <p class="h4">Breite</p>
-          <p class="h5">59 cm</p>
-
-          <p class="h4">Gewicht</p>
-          <p class="h5">6.5 kg</p>
-
-          <p class="h4">Halbtonmechanik</p>
-          <p class="h5">verschiedene Mechaniken möglich</p>
-
-          <p class="h4">Oberfläche</p>
-          <p class="h5">C 37 Speziallack für historische Harfen</p>
-
-          <p class="h4">Holz</p>
-          <p class="h5">Fichte, Ahorn</p>
-
         </div>
       </div>
     </div>
