--- a/project/frontend/src/app/components/instrumente/instrumente.component.html
+++ b/project/frontend/src/app/components/instrumente/instrumente.component.html
@@ -139,7 +139,8 @@
       <div class="col-sm-6 ">
         <div class="column mx-auto text-center">
           <h3 class="py-3" [routerLink]="['details/Thrud']">Harfe Thrud</h3>
-          <img class="img-fluid w-85 py-3"  [routerLink]="['details/Thrud']" src="assets/content/thrud-titel-neu.jpg" alt="Harfe Thrud">
+          <img class="img-fluid w-85 py-3" [routerLink]="['details/Thrud']" src="assets/content/thrud-titel-neu.jpg"
+               alt="Harfe Thrud">
         </div>
       </div>
     </div>
@@ -154,14 +155,15 @@
       <div class="col-sm-6 ">
         <div class="column mx-auto text-center">
           <h3 class="py-3" [routerLink]="['details/Merlin']">Harfe Merlin</h3>
-          <img class=" img-fluid w-85 py-3" [routerLink]="['details/Merlin']"src="assets/content/merlin_01.jpg"
+          <img class=" img-fluid w-85 py-3" [routerLink]="['details/Merlin']" src="assets/content/merlin_01.jpg"
                alt="Harfe Merlin">
         </div>
       </div>
       <div class="col-sm-6 ">
         <div class="column mx-auto text-center">
           <h3 class="py-3" [routerLink]="['details/larpa-doble-aragones']">l’arpa doble aragones</h3>
-          <img class="img-fluid w-85 py-3" [routerLink]="['details/larpa-doble-aragones']"src="assets/content/aragones_04_quer.jpg" alt="l’arpa doble aragones">
+          <img class="img-fluid w-85 py-3" [routerLink]="['details/larpa-doble-aragones']"
+               src="assets/content/aragones_04_quer.jpg" alt="l’arpa doble aragones">
         </div>
       </div>
     </div>
@@ -175,16 +177,17 @@
     <div class="row">
       <div class="col-sm-6 ">
         <div class="column mx-auto text-center">
-          <h3 class="py-3"[routerLink]="['details/angelica']">Tripel-Harfe Angelica</h3>
+          <h3 class="py-3" [routerLink]="['details/angelica']">Tripel-Harfe Angelica</h3>
 
-          <img class=" img-fluid h-50 py-3" [routerLink]="['details/angelica']" src="assets/content/harfe-angelica-titel.png"
+          <img class=" img-fluid h-50 py-3" [routerLink]="['details/angelica']"
+               src="assets/content/harfe-angelica-titel.png"
                alt="Tripel-Harfe Angelica">
         </div>
       </div>
       <div class="col-sm-6 ">
         <div class="column mx-auto text-center">
-          <h3 class="py-3">Harpa Algebra</h3>
-          <img class="img-fluid h-50 py-3" src="assets/content/algebra_titel.png"
+          <h3 class="py-3" [routerLink]="['details/algebra']">Harfe Algebra</h3>
+          <img class="img-fluid h-50 py-3" [routerLink]="['details/algebra']" src="assets/content/algebra_titel.png"
                alt="Harpa Algebra">
         </div>
       </div>
@@ -199,16 +202,16 @@
     <div class="row">
       <div class="col-sm-6 ">
         <div class="column mx-auto text-center">
-          <h3 class="py-3">Irische Harfe 28-Saitig</h3>
+          <h3 class="py-3"[routerLink]="['details/irisch28']">Irische Harfe 28-Saitig</h3>
 
-          <img class=" img-fluid h-50 py-3" src="assets/content/irisch-28-saitig-titel.png"
+          <img class=" img-fluid h-50 py-3" [routerLink]="['details/irisch28']" src="assets/content/irisch-28-saitig-titel.png"
                alt="Tripel-Harfe Angelica">
         </div>
       </div>
       <div class="col-sm-6 ">
         <div class="column mx-auto text-center">
-          <h3 class="py-3">Die Keltische Harfe</h3>
-          <img class="img-fluid h-50 py-3" src="assets/content/keltisch_1.jpg"
+          <h3 class="py-3" [routerLink]="['details/keltisch']">Die Keltische Harfe</h3>
+          <img class="img-fluid h-50 py-3" [routerLink]="['details/keltisch']" src="assets/content/keltisch_1.jpg"
                alt="Harpa Algebra">
         </div>
       </div>
@@ -223,16 +226,16 @@
     <div class="row">
       <div class="col-sm-6 ">
         <div class="column mx-auto text-center">
-          <h3 class="py-3">Die Kantele</h3>
+          <h3 class="py-3" [routerLink]="['details/kantele']">Die Kantele</h3>
 
-          <img class=" img-fluid h-50 py-3" src="assets/content/kantele-titel.png"
+          <img class=" img-fluid h-50 py-3" [routerLink]="['details/kantele']" src="assets/content/kantele-titel.png"
                alt="Tripel-Harfe Angelica">
         </div>
       </div>
       <div class="col-sm-6 ">
         <div class="column mx-auto text-center">
-          <h3 class="py-3">Die Lyra</h3>
-          <img class="img-fluid h-50 py-3" src="assets/content/lyra-titel.png"
+          <h3 class="py-3"[routerLink]="['details/lyra']">Die Lyra</h3>
+          <img class="img-fluid h-50 py-3" [routerLink]="['details/lyra']" src="assets/content/lyra-titel.png"
                alt="Harpa Algebra">
         </div>
       </div>
@@ -248,8 +251,8 @@
     <div class="row">
       <div class="col-sm-6 ">
         <div class="column mx-auto text-center">
-          <h3 class="py-3">Windharfen & Klangskulpturen</h3>
-          <img class=" img-fluid w-85 py-3" src="assets/content/windharfen_titel.jpg"
+          <h3 class="py-3" [routerLink]="['details/windharfen']">Windharfen & Klangskulpturen</h3>
+          <img class=" img-fluid w-85 py-3" [routerLink]="['details/windharfen']"src="assets/content/windharfen_titel.jpg"
                alt="Harfe Merlin">
         </div>
       </div>
